Cambios y correcciones sugeridas por SonarQube