@@ -2,6 +2,7 @@ package com.supermercado.gestion_ventas.services.implementations;
 
 import com.supermercado.gestion_ventas.dtos.SaleDTO;
 import com.supermercado.gestion_ventas.dtos.ShopDTO;
+import com.supermercado.gestion_ventas.exceptions.ServiceException;
 import com.supermercado.gestion_ventas.exceptions.ShopNotFoundException;
 import com.supermercado.gestion_ventas.models.Sale;
 import com.supermercado.gestion_ventas.models.Shop;
@@ -9,6 +10,8 @@ import com.supermercado.gestion_ventas.repositories.ShopRepositoryInterfaz;
 import com.supermercado.gestion_ventas.services.interfaces.SaleInterfaz;
 import com.supermercado.gestion_ventas.services.interfaces.ShopInterfaz;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -20,12 +23,14 @@ import java.util.stream.Collectors;
 @Service
 public class ShopService implements ShopInterfaz {
 
+    private static final Logger log = LoggerFactory.getLogger(ShopService.class);
+
     //relaciones con otros servicios
     @Autowired
     ShopRepositoryInterfaz repository;
 
     @Autowired
-    SaleInterfaz SI;
+    SaleInterfaz saleInterfaz;
 
 
     @Override
@@ -33,11 +38,11 @@ public class ShopService implements ShopInterfaz {
         List<Shop> shopList = repository.findAll();
 
         if (shopList.isEmpty()) {
-            System.out.println("INFO: No hay sucursales registradas.");
+            log.info("No hay sucursales registradas.");
         }
         return shopList.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -46,11 +51,11 @@ public class ShopService implements ShopInterfaz {
             Shop shopEntity = this.convertToOBJ(s);
             shopEntity.setSales(Collections.emptyList());
             Shop shopSaved = repository.save(shopEntity);
-            System.out.println("INFO: Sucursal creada con ID: " + shopSaved.getId());
+            log.info("Sucursal creada con ID {} ",shopSaved.getId());
             return convertToDTO(shopSaved);
         } catch (Exception e) {
-            System.err.println("ERROR: Error al crear la sucursal '" + s.getName() + "'. Causa: " + e.getMessage());
-            throw new RuntimeException("Error inesperado al crear la sucursal.");
+            log.error("Error al crear la sucursal '{}'", s.getName(), e);
+            throw new ServiceException("Error inesperado al crear la sucursal.", e);
         }
 
     }
@@ -65,7 +70,7 @@ public class ShopService implements ShopInterfaz {
         existingShop.setAddress(s.getAddress());
 
         Shop shopUpdate = repository.save(existingShop);
-        System.out.println("INFO: Sucursal con ID " + shopUpdate.getId() + " actualizada.");
+        log.info("Sucursal con ID {} actualizada.", shopUpdate.getId());
         return convertToDTO(shopUpdate);
     }
 
@@ -77,10 +82,10 @@ public class ShopService implements ShopInterfaz {
         }
         try {
             repository.deleteById(id);
-            System.out.println("INFO: Sucursal con ID " + id + " eliminada.");
+           log.info("Sucursal con ID {} eliminada.", id);
         } catch (Exception e) {
-            System.err.println("ERROR: Error al eliminar la sucursal con ID: " + id + ". Causa: " + e.getMessage());
-            throw new RuntimeException("Error inesperado al eliminar la sucursal.");
+            log.error("Error al eliminar la sucursal con ID: {}. Causa: {}", id, e);
+            throw new ServiceException("Error inesperado al eliminar la sucursal.", e);
         }
     }
     // Mapeos DTO y OBJ
@@ -92,7 +97,7 @@ public class ShopService implements ShopInterfaz {
 
         if (s.getSales() != null) {
             saleDTOS = s.getSales().stream()
-                    .map(SI::convertToDTO)
+                    .map(saleInterfaz::convertToDTO)
                     .collect(Collectors.toList());
         }
         return new ShopDTO(s.getId(), s.getName(), s.getCity(), s.getAddress(), saleDTOS);
@@ -107,9 +112,9 @@ public class ShopService implements ShopInterfaz {
         shop.setAddress(s.getAddress());
 
         if (s.getSales() != null && !s.getSales().isEmpty()) {
-            // Usamos la variable "SI" también aquí.
+            // Usamos la variable "saleInterfaz" también aquí.
             List<Sale> sales = s.getSales().stream()
-                    .map(SI::convertToOBJ)
+                    .map(saleInterfaz::convertToOBJ)
                     .collect(Collectors.toList());
             shop.setSales(sales);
         }
